# ASCON_ShipApp

ASCON_SOURCES/C3D/Documentation/: Changes.txt
ASCON_SOURCES/C3D/Example/: Test.vcxproj  Test.vcxproj.filters  readme.txt
ASCON_SOURCES/C3D/Example/Models/: 078.505.0.0103.00.stp  078.505.0.0103.00.x_t  Bracket.stp  Bracket.x_t  Electrical appliance box.stp  Electrical appliance box.x_t  O_8_5_1.stl
ASCON_SOURCES/C3D/Example/Models/Sample/: Sample_animation_of_bending_src_data.c3d
ASCON_SOURCES/C3D/Example/Source/Create/: test_curve.cpp  test_curve3d.cpp  test_fair_curve.cpp  test_fair_curve.h  test_map.cpp  test_multiline.cpp  test_multithreading.cpp  test_plane.h  test_point.cpp  test_point3d.cpp  test_solid.cpp  test_space.h
ASCON_SOURCES/C3D/Example/Source/Edit/: test_edit_curve.cpp  test_edit_curve3d.cpp  test_edit_map.cpp  test_edit_multiline.cpp  test_edit_space.h
ASCON_SOURCES/C3D/Example/Source/Main/: test_draw.cpp  test_draw.h  test_frame3.cpp  test_service.h  test_variables.h
ASCON_SOURCES/C3D/Example/Source/Make/: test_computation.cpp  test_computation.h  test_converter.cpp  test_mates.h  test_rendering.h  test_rendering_.cpp
ASCON_SOURCES/C3D/Example/Source/Manager/: test_temporal_plane.h  test_tree_filter.cpp  test_window.cpp  test_window.h  test_window_move.cpp
ASCON_SOURCES/C3D/Example/Source/Qt/: test.qrc  test_child_window.cpp  test_main_window.cpp  test_main_window.h  test_property_dialogs.cpp  test_property_dialogs.h
ASCON_SOURCES/C3D/Example/Source/Samples/: test_sample_animation_of_bending.cpp  test_sample_attributes.cpp  test_sample_check_collisions.cpp  test_sample_close_corner.cpp  test_sample_converter.cpp  test_sample_parametric_sketch.cpp  test_sample_read_write_c3d_as_part.cpp  test_sample_solids_classification.cpp  test_sample_spinning_block.cpp  test_sample_user_attributes.cpp  test_sample_wireframe.cpp
ASCON_SOURCES/C3D/Example/Source/Win/: test.h  test_frame.cpp  test_prompt.h  test_window_graphic.cpp
ASCON_SOURCES/C3D/Include/: action.h  action_analysis.h  action_curve.h  action_curve3d.h  action_direct.h  action_general.h  action_mesh.h  action_sheet.h  action_shell.h  action_solid.h  action_surface.h  action_surface_curve.h  alg_curve_delete_part.h  alg_diskrete_length_data.h  alg_indicator.h  alg_max_distance.h  alg_mesh_to_brep.h  alg_polyline.h  assembly.h  assisting_item.h  ats_check.h  attr_color.h  attr_elementary_attribute.h  attr_geometric_attribute.h  attr_hotpoint_attribute.h  attr_identifier.h  attr_product.h  attr_selected.h  attr_stamprib_attribute.h  attr_user_attribute.h  attr_uuid_attribute.h  attribute.h  cdet_utility.h  constraint.h  contour_graph.h  conv_annotation_item.h  conv_exchange_settings.h  conv_predefined.h  conv_topo_mesh.h  cr_attribute_provider.h  (+171 more)
ASCON_SOURCES/CMake/Include/: action_b_shaper.h  action_phantom.h  action_point.h  alg_base.h  alg_circle_curve.h  alg_curve_distance.h  alg_curve_envelope.h  alg_curve_equid.h  alg_curve_fillet.h  alg_curve_hatch.h  alg_curve_tangent.h  alg_dimension.h  alg_draw.h  alg_nurbs_conic.h  attr_common_attribute.h  attr_dencity.h  attr_flange_attribute.h  attribute_container.h  attribute_item.h  cdet_bool.h  cdet_data.h  check_geometry.h  collection.h  constraint_item.h  contour_combine.h  conv_binary_object.h  conv_model_document.h  conv_model_exchange.h  conv_requestor.h  cr_boolean_solid.h  cr_detach_solid.h  cr_displace_creator.h  cr_elementary_solid.h  cr_evolution_solid.h  cr_extending_curve.h  cr_fillet_solid.h  cr_intersection_curve.h  cr_join_shell.h  cr_lofted_solid.h  cr_median_shell.h  (+180 more)
ASCON_SOURCES/CMake/Source/: CMakeLists.txt
ASCON_SOURCES/CMake/Source/Create/: test_arc.cpp  test_assembly.cpp  test_constraint.cpp  test_contour.cpp  test_fair_surface.cpp  test_fair_surface.h  test_line.cpp  test_mesh.cpp  test_mesh.h  test_sheet.cpp  test_shell.cpp  test_surface.cpp  test_surface_.cpp  test_user.cpp
ASCON_SOURCES/CMake/Source/Edit/: test_edit_contour.cpp  test_edit_plane.h  test_edit_solid.cpp  test_edit_space.cpp  test_edit_surface.cpp
ASCON_SOURCES/CMake/Source/Main/: test_frame.h  test_frame1.cpp  test_frame2.cpp  test_service.cpp  test_variables.cpp
ASCON_SOURCES/CMake/Source/Make/: test_converter.h  test_mates.cpp  test_rendering.cpp  test_rendering_context.cpp  test_rendering_context.h
ASCON_SOURCES/CMake/Source/Manager/: test_comanager.cpp  test_comanager.h  test_gr_draw.cpp  test_gr_draw.h  test_manager.cpp  test_manager.h  test_property.cpp  test_property.h  test_property_title.h  test_style.h  test_temporal.cpp  test_temporal.h  test_temporal_plane.cpp  test_tree.cpp  test_tree.h  test_tree_filter.h  test_window_add.cpp  test_window_find.cpp
ASCON_SOURCES/CMake/Source/Qt/: test_child_window.h  test_main.cpp  test_main_dialogs.cpp  test_main_dialogs.h
ASCON_SOURCES/CMake/Source/Samples/: test_sample_collision_detection.cpp  test_sample_dodecahedron.cpp  test_sample_lofted_bend.cpp  test_sample_read_write_constraints.cpp  test_sample_solid_elementary.cpp  test_sample_solid_splitting.cpp  test_sample_user_attributes.h  test_samples.h
ASCON_SOURCES/CMake/Source/Win/: test.cpp  test.rc  test_dialogs.cpp  test_set_filter.cpp  test_set_property.cpp  test_set_tree.cpp  test_std_afx.cpp  test_std_afx.h
ship_corp_design/: README.md
